--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<mat-card>
-  <mat-card-content [style.padding]="'0'">
-    <div >
+<mat-card >
+  <mat-card-content >
+    <div>
 <div>
    <form [formGroup] = "formdata" (ngSubmit) = "onClickSubmit(formdata.value)" >
       <input type = "text" class = "fortextbox" name = "emailid" placeholder = "emailid"
