--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -6,8 +6,11 @@
 		padding: 10px 10px
 		box-sizing: border-box
 		width: 100%
-		margin: 0 0%
+		margin-top: 2rem
+		margin-bottom: 1rem
 		position: relative
+		align-content: center
+
 .action-button
 		width: 100px
 		background: #4927ae
@@ -18,3 +21,16 @@
 		cursor: pointer
 		padding: 10px 5px
 		margin: 10px 5px
+
+.mat-card
+		text-align: center
+		margin-inline: auto
+		width: 100%
+		padding: 50px 50px
+		margin: 50px 50px
+
+.mat-card-content
+		width: 50%
+		text-align: center
+		padding: 10px 10px
+		margin: 10px 10px
